Added tests for AuthController and UserService, updated Constants for tests, refactored BookHelper, UserServiceImpl, AuthorHelper and insertUser.sql